<resources>
    <string name="app_name">Inventory_App</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="menu_main_delete_all">Delete All order</string>
    <string name="menu_edit_delete">Delete Order</string>
    <string name="menu_edit_save">Save Order</string>

    <string name="Item_name">Item name: </string>
    <string name="Item_price">Price: </string>
    <string name="Item_quantity_available">Available in stock: </string>
    <string name="Supplier">Supplier: </string>
    <string name="Resuply">Resupply</string>
    <string name="Phone">Phone: </string>
    <string name="URL">URL</string>
    <string name="Quantity">Quantity</string>
    <string name="main">Main Page</string>
    <string name="Settings">Settings</string>
    <string name="title_activity_navactivity">navactivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="provider1">Haz bt</string>
    <string name="provider2">Kis bt</string>
    <string name="provider3">School inc</string>
    <string name="provider4">Asztal kft</string>
    <string name="provider5">Wood rt</string>

    <string name="error_saving">Error saving the item</string>
    <string name="succesfull_saving">Saved succesfull</string>

    <string name="error_updating">Error with updating</string>
    <string name="succesfull_update">Succesfull update</string>

    <string name="addItem">Add a new Item</string>
    <string name="editItem">Edit an Item</string>

    <string name="alerDialogTitle">Discard your changes and quit editing?</string>
    <string name="plusAnswer">Discard</string>
    <string name="negativeAnswer">Keep editing</string>

    <string name="deleteItem">Are you sure you want to delete this item?</string>
    <string name="deleteYes">Yes,Delete</string>
    <string name="deleteNo">No,Keep it</string>
    <string name="error_delete">Error with deleting item</string>
    <string name="succesfull_delete">Item deleted</string>

    <string name="sell_one">Sell</string>

    <string name="name_empty">Item must have a name</string>
    <string name="price_empty">Item must have a valid_price</string>
    <string name="phone_empty">Supplier must have a phone number</string>
    <string name="url_empty">Supplier must have a webpage</string>
    <string name="quantity_empty">Item must have a valid quantity</string>

    <string name="total_in_list">Total value in List</string>

    <string name="empty_list">NO DATA</string>

    <string name="add_item">Add an item using the cart icon</string>
</resources>
